--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -195,6 +195,55 @@ services:
     depends_on:
       - api-gateway
 
+  elasticsearch:
+    image: elasticsearch:8.12.2
+    container_name: elasticsearch
+    restart: always
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    environment:
+      - ELASTIC_PASSWORD=DeVit1210
+      - ES_JAVA_OPTS=-Xmx256m -Xms256m
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=false
+      - xpack.ml.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - http.cors.allow-origin="*"
+    networks:
+      - cab_aggregator
+
+  logstash:
+    image: logstash:8.12.2
+    container_name: logstash
+    restart: always
+    ports:
+      - "5044:5044"
+    volumes:
+#      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./logstash/logs:/usr/share/logstash/input
+    depends_on:
+      - elasticsearch
+    networks:
+      - cab_aggregator
+
+  kibana:
+    image: kibana:8.12.2
+    container_name: kibana
+    restart: always
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    networks:
+      - cab_aggregator
 
 
 networks:
@@ -203,3 +252,4 @@ networks:
 
 volumes:
   mysql-data:
+  elasticsearch-data:
