--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper
     container_name: zookeeper
+    restart: always
     ports:
       - "2181:2181"
     environment:
@@ -26,6 +27,7 @@ services:
   broker:
     image: confluentinc/cp-kafka
     container_name: broker
+    restart: always
     ports:
       - "9092:9092"
     depends_on:
@@ -44,6 +46,7 @@ services:
   eureka-server:
     image: cab-aggregator/eureka-server
     container_name: eureka-server
+    restart: unless-stopped
     ports:
       - "8761:8761"
     expose:
@@ -56,6 +59,7 @@ services:
   api-gateway:
     image: cab-aggregator/api-gateway
     container_name: api-gateway
+    restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
@@ -70,12 +74,14 @@ services:
   passenger-service:
     image: cab-aggregator/passenger-service
     container_name: passenger-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - '8081:8081'
-    restart: on-failure
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -85,11 +91,14 @@ services:
   driver-service:
     image: cab-aggregator/driver-service
     container_name: driver-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8082:8082"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -99,6 +108,7 @@ services:
   payment-service:
     image: cab-aggregator/payment-service
     container_name: payment-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
@@ -106,6 +116,8 @@ services:
       - "8083:8083"
     env_file:
       - .env
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -115,11 +127,14 @@ services:
   rating-service:
     image: cab-aggregator/rating-service
     container_name: rating-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8084:8084"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -129,11 +144,14 @@ services:
   ride-service:
     image: cab-aggregator/ride-service
     container_name: ride-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8086:8086"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -143,11 +161,14 @@ services:
   promocode-service:
     image: cab-aggregator/promocode-service
     container_name: promocode-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8085:8085"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -188,6 +209,7 @@ services:
   zipkin-server:
     image: openzipkin/zipkin
     container_name: zipkin-server
+    restart: unless-stopped
     ports:
       - "9411:9411"
     networks:
@@ -198,13 +220,12 @@ services:
   elasticsearch:
     image: elasticsearch:8.12.2
     container_name: elasticsearch
-    restart: always
+    restart: unless-stopped
     ports:
       - "9200:9200"
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
     environment:
-      - ELASTIC_PASSWORD=DeVit1210
       - ES_JAVA_OPTS=-Xmx256m -Xms256m
       - discovery.type=single-node
       - bootstrap.memory_lock=true
@@ -220,13 +241,12 @@ services:
   logstash:
     image: logstash:8.12.2
     container_name: logstash
-    restart: always
+    restart: unless-stopped
     ports:
       - "5044:5044"
     volumes:
-#      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
       - ./logstash/pipeline:/usr/share/logstash/pipeline
-      - ./logstash/logs:/usr/share/logstash/input
+      - logs:/app/logs
     depends_on:
       - elasticsearch
     networks:
@@ -235,7 +255,7 @@ services:
   kibana:
     image: kibana:8.12.2
     container_name: kibana
-    restart: always
+    restart: unless-stopped
     ports:
       - "5601:5601"
     environment:
@@ -253,3 +273,4 @@ networks:
 volumes:
   mysql-data:
   elasticsearch-data:
+  logs:
